# MyDjangoCourse

./: .env.sample  .gitignore  pyproject.toml
config/: settings.py  urls.py
newsletter/: admin.py  forms.py  models.py  services.py  urls.py  views.py
newsletter/management/commands/: add_newsletter.py
newsletter/migrations/: 0001_initial.py  0002_message_owner_newsletter_owner_recipient_owner.py  0002_try.py  0003_alter_newsletter_options.py  0003_remove_recipient_name_recipient_email.py  0004_alter_newsletter_options_alter_recipient_options_and_more.py
newsletter/templates/: base.html  main.html
newsletter/templates/includes/: inc_menu.html
newsletter/templates/message_html/: create.html  delete.html  detail.html  list.html
newsletter/templates/newsletter_html/: create.html  delete.html  detail.html  list.html  try_create.html  try_list.html
newsletter/templates/recipient_html/: delete.html  detail.html  list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: detail_user.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html  update_user.html
