[tool.poetry]
name = "mydjangocourse"
version = "0.1.0"
description = ""
authors = ["Andrey Tumerkin <tumerrkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
pillow = "^11.0.0"
psycopg2-binary = "^2.9.10"
ipython = "^8.30.0"
redis = "^5.2.0"
django = "^5.1.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
